Fixed bug : When screen was too small there was a lot of space in between sections

--- a/styles/testStyles.css
+++ b/styles/testStyles.css
@@ -70,7 +70,7 @@ a
     flex-wrap: wrap;
     width:100%;
     max-width: 70em;
-    
+
 }
 
 .info-container
@@ -105,14 +105,14 @@ a
     max-width: 70em;    
 
     display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    align-items: flex-start;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
     
     overflow-y: scroll;
 
     padding: 50 50 50 50;
+
 }
 
 .info-header
@@ -137,7 +137,7 @@ a
 .qa-container
 {
     width: 100%;
-    max-width: 60em;
+    max-width: 70em;
 
     display:flex;
     flex-direction: column;
